--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,3 +1,8 @@
+body {
+  scroll-behavior: smooth;
+  scroll-snap-type: mandatory;
+}
+
 .atom-spinner,
 .atom-spinner * {
   box-sizing: border-box;
